--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <fieldset>
                 <legend>Your Contact Info</legend>
                 <div>
-                    <label for="email">Your Email</label>
+                    <label for="email">Your Email <span class="required-field">*</span></label>
                     <input type="email" id="email" name="email">
                 </div>
                 <div>
