--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <legend>Your Contact Info</legend>
                 <div>
                     <label for="email">Your Email <span class="required-field">*</span></label>
-                    <input type="email" id="email" name="email">
+                    <input type="email" id="email" name="email" minlength="2" maxlength="35" required>
                 </div>
                 <div>
                     <label for="address">Your Street Address</label>
